--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-dinky
 title: Breaking back into the coding world after a loooong hiatus
 description: Currently working as a Data Analyst but looking for freelance web design and programming projects. #Havefungetpaid
